# datasette-lite

./: .gitignore  .pre-commit-config.yaml  README.md  metadata.yml  pyproject.toml
.github/workflows/: auto_assign.yml
